--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -5,5 +5,19 @@ body {
   font-family: Helvetica, sans-serif;
   color: $font-color--dark;
   background-color: $background--light;
-  padding: $half-space;
+  padding: 0;
+  margin: 0;
+}
+
+.section {
+
+  /* removes margin collapse on sections */
+  & {
+    display: inline-block;
+    width: 100%;
+  }
+  /* added padding that was removed from body */
+  & {
+    padding: $half-space;
+  }
 }
