--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,13 @@
-<h1 class="heading -large">{{ home.title | ExampleFilter }}</h1>
-
-<h3 class="heading -medium">Here is a fancy number served up courtesy of Angular: <span class="number-example">{{ home.number }}</span></h3>
-
-<img src="images/angular.png" height="100" example-directive />
-<img src="images/gulp.png" height="100" />
-<img src="images/browserify.png" height="100" />
+<div full-page options="home.mainOptions">
+    <div class="section">
+        <h1 class="heading -large">{{ home.title | ExampleFilter }}</h1>
+    </div>
+    <div class="section">
+        <h3 class="heading -medium">Here is a fancy number served up courtesy of Angular: <span class="number-example">{{ home.number }}</span></h3>
+    </div>
+    <div class="section">
+        <img src="images/angular.png" height="100" example-directive />
+        <img src="images/gulp.png" height="100" />
+        <img src="images/browserify.png" height="100" />
+    </div>
+</div>
